# Compiler

./: .gitignore  Cargo.toml  README.md  build.sh  foo.c  test.c  test.s  test.sh  tmp.s
src/: README.md  assemble.rs  grammar.rs  main.rs  parser.rs  test.c  tokenizer.rs
src/archive/: expr.rs  parse_util.rs  stmt.rs  tokenizer.rs  variable.rs
src/assemble/: assemble.rs
src/error_handler/: mod.rs  parse_error.rs  print.rs
src/grammar/: add.rs  assign.rs  decl.rs  entry.rs  equality.rs  expr.rs  grammar.rs  mod.rs  mul.rs  primary.rs  relational.rs  stmt.rs  unary.rs
src/interpreter/: gen_instruction.rs
src/lexer/: assemble.rs  iterator.rs  lexer_impl.rs  mod.rs
src/parser/: expr.rs  grammar.rs  mod.rs  node.rs  parse_util.rs  parser.rs  parser_impl.rs  stmt.rs
src/semantic_analyer/: assemble.rs
src/semantic_analyzer/: assemble.rs  gen_instruction.rs  mod.rs
src/tokenizer/: iterator.rs  mod.rs  tokenizer.rs
src/types/: annotation.rs  error.rs  mod.rs  node.rs  parse.rs  token.rs  tokenize.rs  types.rs  variable.rs
src/util/: message.rs
src/wasm/: lib.rs
test_c/: alloc.c  array.c  fib.c  fn1.c  for_alloc.c  sizeof.c  test_basic.c
