[package]
name = "rust_compiler"
version = "0.1.0"
authors = ["senk8"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
once_cell = "1.5.2"
anyhow = "1.0.34"
clap = "2.33.3"

# below crates are required at wasm.
# wasm-bindgen = "0.2.69"
# js-sys = "0.3.46"


